2006-01-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c: accommodate changes to prototypes of
	OSSpinLock(Un)Lock API.
	
	* tests/env.test: add extra system env vars that need to be preserved
	on some Mac OS X versions for testsuite to work.

	* unix/tcl.m4: ensure CPPFLAGS env var is used when set. [Bug 1586861]
	(Darwin): add -isysroot and -mmacosx-version-min flags to CPPFLAGS when
	present in CFLAGS to avoid discrepancies between what headers configure
	sees during preprocessing tests and compiling tests.

	* unix/configure: autoconf-2.13

2006-12-19  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixThrd.c (TclpInetNtoa): fix for 64 bit.

	* unix/tcl.m4 (Darwin): --enable-64bit: verify linking with 64bit -arch
	flag succeeds before enabling 64bit build.
	* unix/configure: autoconf-2.13

2006-12-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/string.n: Fix example. [Bug 1615277]

2006-12-05  Andreas Kupries <andreask@activestate.com>

	* tests/pkg.test:   Backport to 8.4 (Don Porter's work):
	* generic/tclPkg.c: When no requirements are supplied to a [package
	require $pkg] and [package unknown] is invoked to find a satisfying
	package, pass the requirement argument "0-" (which means all versions
	are acceptable). This permits a registered [package unknown] command
	to call [package vsatisfies $testVersion {*}$args] without any special
	handling of the empty $args case. This fixes/avoids a bug in
	[::tcl::tm::UnknownHandler] that was causing old TM versions to be
	provided in preference to newer TM versions. Thanks to Julian Noble
	for discovering the issue.

2006-12-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/file.n: Fix confusing wording for [file pathtype]. [Bug 1606454]

2006-11-28  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c: TIP #280 implementation, conditional on the
	* generic/tclCmdAH.c: define TCL_TIP280.
	* generic/tclCmdIL.c:
	* generic/tclCmdMZ.c: